# plex-yt-dlp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  ytdl.sh
.github/workflows/: cmake-multi-platform.yml
include/: argumentParser.hpp  colors.hpp  config.hpp  idExtractor.hpp  main.hpp  tools.hpp
include/argumentParser/: argumentParser.hpp  settings.hpp
include/downloader/: downloader.hpp  postProcess.hpp
include/misc/: tools.hpp
scripts/: supermove.sh
src/: argumentParser.cpp  colors.cpp  config.cpp  idExtractor.cpp  main.cpp  settings.cpp  tools.cpp
src/argumentParser/: argumentParser.cpp  settings.cpp
src/downloader/: downloader.cpp  postProcess.cpp
src/misc/: colors.cpp  tools.cpp
